--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,16 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-/*CSS INDEX*/
-
+html{
+	width: 100vh;
+	height: 100vh;
+}
 header button img{
 	width: 50px;
 	height: 50px;
 }
+/*CSS INDEX*/
+
 
 .menu-boton{
 	border: none !important;
@@ -34,25 +37,48 @@ header button img{
 .h1-index{
 	font-family: 'Noto Sans JP';
 	font-weight: 900;
-	font-size: 250px;
+	font-size: 200px;
 	color: black;
+	width: 535px;
+	height: 220px;
 }
 
 .body-index{
 	background-image: url(../img/duki-index.jpg);
 	background-repeat: no-repeat;
-	background-position: center center;
+	background-position: center;
 	background-attachment: fixed;
 	background-size: cover;
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
+	width: 100vh;
+	height: 100vh;
 }
+
+
+
+.main-index{
+	grid-row: 2;
+	grid-column: 3/5;
+}
+
+
 footer{
-	position: absolute;
-	z-index: 1;
+	grid-row: 7;
+	grid-column: 1;
+}
+
+footer ul{
+	width: 74px;
+	margin: 0;
+	padding: 6px 12px;
 }
 footer ul li img{
 	width: 30px;
 	height: 30px;
-	margin: 5px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 
 li{
@@ -64,60 +90,524 @@ li a{
 	font-family: 'Noto Sans JP';
 	font-weight: 500;
 }
+@media screen and (max-width: 1444px) {
+	.body-index{
+		background-position: 80%;
+		height: 100vh;
+		
+	}
+	.main-index{
+		grid-column: 2/4;
+	}
+	.h1-index{
+		font-size: 150px;
+	}
+	.offcanvas-backdrop.show {
+		width: 100%;
+		height: 100%;
+	}
+	footer{
+		grid-row: 4;
+		grid-column: 1;
+	}
+	footer ul{
+		width: 300px;
+		margin: 10px;
+	}
+	footer ul li{
+		padding: 5px;
+	}
+}
 
+@media screen and (max-width: 1000px){
+	.body-index{
+		grid-template-rows: 50px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+		grid-template-columns: 152px 192px 192px 192px 192px 192px;
+	}
+	.h1-index{
+		font-size: 100px;
+	}
+	.offcanvas-backdrop.show {
+		width: 100%;
+		height: 100%;
+	}
+	footer{
+		grid-row: 5;
+		grid-column: 1;
+	}
+	footer ul{
+		width: 300px;
+		margin: 10px;
+	}
+	footer ul li{
+		
+		padding: 5px;
+	}
+}
+
+@media screen and (max-width: 770px){
+	.body-index{
+		background-position: 87%; 
+		height: 100vh;
+		grid-template-rows: 50px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+		grid-template-columns: 152px 250px 192px 192px 192px ;
+	}
+	.main-index{
+		grid-column: 2/4;
+	}
+	.h1-index{
+		font-size: 100px;
+	}
+	.offcanvas-backdrop.show {
+		width: 100%;
+		height: 100%;
+	}
+	footer{
+		grid-row: 1;
+		grid-column: 3;
+	}
+	footer ul{
+		width: 300px;
+		margin: 10px;
+	}
+	footer ul li{
+		display: inline;
+		padding: 5px;
+	}
+}
+
+@media screen and (max-width: 550px){
+	.body-index{
+		background-position: 85%; 
+		height: 100vh;
+		grid-template-rows: 50px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+		grid-template-columns: 152px 192px 192px 192px ;
+	}
+	.main-index{
+		grid-column: 2/4;
+	}
+	.h1-index{
+		font-size: 150px;
+	}
+	.offcanvas-backdrop.show {
+		width: 100vh;
+		height: 100%;
+	}
+	footer{
+		grid-row: 1;
+		grid-column: 3;
+	}
+	footer ul{
+		width: 300px;
+		margin: 10px;
+	}
+	footer ul li{
+		display: inline;
+		padding: 5px;
+	}
+}
+@media screen and (max-width: 375px){
+	.body-index{
+		background-position: 82%; 
+		height: 100vh;
+		grid-template-columns: 152px 192px 192px 192px ;
+	}
+	.main-index{
+		grid-column: 2/4;
+	}
+	.h1-index{
+		font-size: 150px;
+	}
+	.offcanvas-backdrop.show {
+		width: 100vh;
+		height: 100%;
+	}
+	footer{
+		grid-row: 1;
+		grid-column: 3;
+	}
+	footer ul{
+		width: 300px;
+		margin: 10px;
+	}
+	footer ul li{
+		display: inline;
+		padding: 5px;
+	}
+}
 /* FIN CSS INDEX */
 
 /* CSS BIO */
 
 .body-bio{
-	background-color: #646672;
+	background-color: #c9d1dd;
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
+	width: 100vh;
+	height: 100vh;
+}
+.main-bio{
+	width: 1532px;
+	height: 909.52px;
+	grid-row: 1;
+	grid-column: 2/9;
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px;
 }
 
-.section-text-bio{
-	width: 700px;
-	height: 875px;
-}
 
 .h1-bio{
-	display: block;
 	font-family: 'Noto Sans JP';
-	font-weight: 600;
+	font-weight: 900;
 	font-size: 50px;
-	text-align: center;
+	text-align: left;
 	margin: 30px;
+	grid-row: 1;
+	grid-column: 4/7;
+	color: black;
 }
 
 .text-bio{
-	width: 650px;
+	width: 768px;
 	height: 700px;
 	overflow: auto;
+	grid-row: 2;
+	grid-column: 1;
+	padding: 10px;
+	color: black;
+}
+
+.text-bio::-webkit-scrollbar{
+	background-color: #c9d1dd;
+	width: 7px;
+	padding: 10px;
+}
+.text-bio::-webkit-scrollbar-thumb{
+	background-color: black;
+	border-radius: 5px;
+	padding: 5px;
 }
 
 .text-bio p {
 	font-family: 'Noto Sans JP';
-	font-weight: 200;
+	font-weight: 600;
 	padding: 5px;
 	text-align: justify;
+	margin-right: 30px;
 }
-.section-img-bio img{
-	width: 650px;
+.img-bio{
+	width: 768px;
 	height: 700px;
+	grid-row: 2;
+	grid-column: 5;
+	margin-left: 30px;
+	border-radius: 5px;
+}
+.footer-bio{
+	grid-row: 7;
+}
+@media screen and (max-width: 1440px) {
+	.body-bio{
+		grid-template-rows: 75px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+		grid-template-columns: 50px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
+	}
+	.main-bio{
+		grid-row: 2;
+		grid-column: 2/9;
+		grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+		grid-template-columns: 192px 250px 192px 172px 192px 192px 192px 192px;
+	}
+	.h1-bio{
+		grid-column: 3/6;
+	}
+	.img-bio{
+		width: 508px;
+		
+	}
+	.footer-bio{
+		grid-row: 1;
+		grid-column: 7;
+	}
+	.footer-bio ul{
+		width: 300px;
+		margin: 10px;
+	}
+	.footer-bio ul li{
+		display: inline;
+		padding: 5px;
+	}
+	.offcanvas-backdrop.show {
+		width: 100%;
+		height: 100%;
+	}	
+
+}
+@media screen and (max-width: 1000px) {
+	.h1-bio{
+		grid-row: 2;
+		grid-column: 2/7;	
+	}
+	.main-bio{
+		width: 1000px;
+		grid-template-columns: 250px 192px 192px 192px 192px 192px 192px 192px;
+	}
+	.text-bio{
+		width: 1000px;
+		height: 2600px;
+		grid-row: 7;
+		grid-column: 1;
+	}
+	.img-bio{
+		width: 450px;
+		height: 450px;
+		grid-row: 3;
+		grid-column: 2;
+		margin-left: 0;
+		border-radius: 5px;
+	}
+	.footer-bio{
+		grid-row: 1;
+		grid-column: 6;
+	}
+	.footer-bio ul{
+		width: 300px;
+		margin: 10px;
+	}
+	.footer-bio ul li{
+		display: inline;
+		padding: 5px;
+	}
+	.offcanvas-backdrop.show {
+		width: 100%;
+		height: 100%;
+	}
+}
+@media screen and (max-width: 770px) {
+	.h1-bio{
+		grid-row: 2;
+		grid-column: 2/7;	
+	}
+	.main-bio{
+		width: 1000px;
+		grid-template-columns: 250px 192px 192px 192px 192px 192px 192px 192px;
+	}
+	.text-bio{
+		width: 1000px;
+		height: 2600px;
+		grid-row: 7;
+		grid-column: 1;
+	}
+	.img-bio{
+		width: 450px;
+		height: 450px;
+		grid-row: 3;
+		grid-column: 2;
+		margin-left: 0;
+		border-radius: 5px;
+	}
+	.footer-bio{
+		grid-row: 1;
+		grid-column: 6;
+	}
+	.footer-bio ul{
+		width: 300px;
+		margin: 10px;
+	}
+	.footer-bio ul li{
+		display: inline;
+		padding: 5px;
+	}
+	.offcanvas-backdrop.show {
+		width: 100%;
+		height: 100%;
+	}
 }
 
+@media screen and (max-width: 550px) {
+	.h1-bio{
+		grid-row: 2;
+		grid-column: 2/7;	
+	}
+	.main-bio{
+		width: 1000px;
+		grid-template-columns: 250px 192px 192px 192px 192px 192px 192px 192px;
+	}
+	.text-bio{
+		width: 1000px;
+		height: 2600px;
+		grid-row: 7;
+		grid-column: 1;
+	}
+	.img-bio{
+		width: 450px;
+		height: 450px;
+		grid-row: 3;
+		grid-column: 2;
+		margin-left: 0;
+		border-radius: 5px;
+	}
+	.footer-bio{
+		grid-row: 1;
+		grid-column: 6;
+	}
+	.footer-bio ul{
+		width: 300px;
+		margin: 10px;
+	}
+	.footer-bio ul li{
+		display: inline;
+		padding: 5px;
+	}
+	.offcanvas-backdrop.show {
+		width: 100%;
+		height: 100%;
+	}
+}
+
+@media screen and (max-width: 375px) {
+	.h1-bio{
+		grid-row: 2;
+		grid-column: 2/7;	
+	}
+	.main-bio{
+		width: 1000px;
+		grid-template-columns: 250px 192px 192px 192px 192px 192px 192px 192px;
+	}
+	.text-bio{
+		width: 1000px;
+		height: 2600px;
+		overflow: auto;
+		grid-row: 7;
+		grid-column: 1;
+		padding: 10px;
+		color: black;
+	}
+	.img-bio{
+		width: 450px;
+		height: 450px;
+		grid-row: 3;
+		grid-column: 2;
+		margin-left: 0;
+		border-radius: 5px;
+	}
+	.footer-bio{
+		grid-row: 1;
+		grid-column: 6;
+	}
+	.footer-bio ul{
+		width: 300px;
+		margin: 10px;
+	}
+	.footer-bio ul li{
+		display: inline;
+		padding: 5px;
+	}
+	.offcanvas-backdrop.show {
+		width: 100%;
+		height: 100%;
+	}
+}
 /* CCS GALERIA */
 
-.main-galeria section h1, .main-galeria section h2{
+.body-galeria{
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px ;
+	background-color: #C9D1DD;
+}
+.main-galeria{
+	width: 1575px;
+	
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px  113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 200px   ;
+	grid-column: 2/10;
+	grid-row: 1/9;
+	overflow: scroll;
+	margin-top: 10px;
+}
+.main-galeria::-webkit-scrollbar{
+	background-color: #C9D1DD;
+	width: 7px;
+	
+
+}
+.main-galeria::-webkit-scrollbar-thumb{
+	background-color: red;
+	border-radius: 5px;
+	
+
+}
+.section-galeria{
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 75px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 290px 192px 192px 192px 192px ;
+	grid-column: 1/10;
+	grid-row: 1/9;
+	
+}
+
+.main-galeria .section-galeria h1{
 	font-family: 'Noto Sans JP';
 	font-weight: 600;
 	font-size: 50px;
 	margin: 30px;
+	grid-row: 1;
+	grid-column: 4;
+	color: red;
 }
-
-.fotos img{
+.fotos-1{
+	grid-row: 2;
+	grid-column: 2/9;
+	
+}
+.fotos-2{
+	grid-row: 5;
+	grid-column: 2/9;
+	
+}
+.fotos-1 img, .fotos-2 img{
 	display: inline;
 	width: 400px;
 	height: 300px;
+	padding: 5px;
 }
+
+.section-videos{
+	grid-row: 8;
+	grid-column: 1/9;
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 75px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 290px 192px 192px 192px 192px ;
+	
+}
+.section-videos h2{
+	font-family: 'Noto Sans JP';
+	font-weight: 600;
+	font-size: 50px;
+	margin: 30px;
+	grid-row: 1;
+	grid-column: 4;
+	color: red;
+}
+
+.video-1{
+	grid-row: 2;
+	grid-column: 2/9;
+}
+.video-2{
+	grid-row: 5;
+	grid-column: 2/9;
+}
+iframe{
+	display: inline;
+	width: 400px;
+	height: 300px;
+	padding: 5px;
+}
+
 
 /* CSS TOUR*/
 
@@ -127,15 +617,195 @@ li a{
 	background-position: center center;
 	background-attachment: fixed;
 	background-size: cover;
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
 }
 
-.body-tour main section h1{
+.body-tour main h1{
 	font-family: 'Noto Sans JP';
 	font-weight: 600;
 	font-size: 75px;
 	text-align: center;
 	color: #E30413;
 	margin: 10px;
+	grid-row: 2;
+	grid-column: 3/7;
+}
+.main-tour{
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px  ;
+}
+.section-tour1{
+	grid-row: 3/9;
+	grid-column: 1/5;
+	display: grid;
+	grid-template-rows: 75px 75px 75px 75px 75px 75px 75px 75px 75px ;
+	grid-template-columns: 100px 500px 100px ;
+	
+}
+.section-tour2{
+	grid-row: 3/9;
+	grid-column: 5/9;
+	display: grid;
+	grid-template-rows: 75px 75px 75px 75px 75px 75px 75px 75px 75px ;
+	grid-template-columns: 100px 500px 100px ;
+	padding: 0;
+}
+
+.section-tour1 div p, .section-tour2 div p{
+	text-align: center;
+	color: #E30413;
+	font-family: 'Noto Sans JP';
+	font-weight: 600;
+	
+}
+
+.section-tour1 p, .section-tour2 p{
+	text-align: center;
+	color: #E30413;
+	font-family: 'Noto Sans JP';
+	font-weight: 600;
+}
+
+/* EVENTO 1 */
+
+.evento-1-fecha{
+	grid-row: 1;
+	grid-column: 1
+}
+.evento-1-lugar{
+	grid-row: 1;
+	grid-column: 2;
+}
+.boton-1{
+	grid-row: 1;
+	grid-column: 3;
+	width: 85px;
+	height: 45px;
+	
+}
+/* EVENTO 2*/
+
+.evento-2-fecha{
+	grid-row: 2;
+	grid-column: 1;
+}
+.evento-2-lugar{
+	grid-row: 2;
+	grid-column: 2;
+}
+.boton-2{
+	grid-row: 2;
+	grid-column: 3;
+	width: 85px;
+	height: 45px;
+}
+/* EVENTO 3*/
+.evento-3-fecha{
+	grid-row: 3;
+	grid-column: 1;
+}
+.evento-3-lugar{
+	grid-row: 3;
+	grid-column: 2;
+}
+.boton-3{
+	grid-row: 3;
+	grid-column: 3;
+	width: 85px;
+	height: 45px;
+}
+/* EVENTO 4*/
+.evento-4-fecha{
+	grid-row: 4;
+	grid-column: 1;
+}
+.evento-4-lugar{
+	grid-row: 4;
+	grid-column: 2;
+}
+.boton-4{
+	grid-row: 4;
+	grid-column: 3;
+	width: 85px;
+	height: 45px;
+}
+/* EVENTO 5*/
+.evento-5-fecha{
+	grid-row: 5;
+	grid-column: 1;
+}
+.evento-5-lugar{
+	grid-row: 5;
+	grid-column: 2;
+}
+.boton-5{
+	grid-row: 5;
+	grid-column: 3;
+	width: 85px;
+	height: 45px;
+}
+/* EVENTO 6*/
+.evento-6-fecha{
+	grid-row: 6;
+	grid-column: 1;
+}
+.evento-6-lugar{
+	grid-row: 6;
+	grid-column: 2;
+}
+.boton-6{
+	grid-row: 6;
+	grid-column: 3;
+	width: 85px;
+	height: 45px;
+}
+/* EVENTO 7*/
+.evento-7-fecha{
+	grid-row: 7;
+	grid-column: 1;
+}
+.evento-7-lugar{
+	grid-row: 7;
+	grid-column: 2;
+}
+.boton-7{
+	grid-row: 7;
+	grid-column: 3;
+	width: 85px;
+	height: 45px;
+}
+/* EVENTO 8*/
+.evento-8-fecha{
+	grid-row: 8;
+	grid-column: 1;
+}
+.evento-8-lugar{
+	grid-row: 8;
+	grid-column: 2;
+}
+.boton-8{
+	grid-row: 8;
+	grid-column: 3;
+	width: 85px;
+	height: 45px;
+}
+/* EVENTO 9*/
+.evento-9-fecha{
+	grid-row: 9;
+	grid-column: 1;
+}
+.evento-9-lugar{
+	grid-row: 9;
+	grid-column: 2;
+}
+.boton-9{
+	grid-row: 9;
+	grid-column: 3;
+	width: 85px;
+	height: 45px;
 }
 
 .btn-primary {
@@ -157,16 +827,91 @@ li a{
 
 /* CSS DISCOGRAFICA */
 
-.body-discografica main section div h1{
+.body-discografica{
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
+	background-color: #C9D1DD;
+}
+
+.main-discografica{
+	
+	display: grid;
+	grid-template-rows: 10.69px 183.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
+}
+
+.section-discografica-texto{
+	grid-row: 2;
+	grid-column: 1/7;
+	display: grid;
+	padding: 0;
+}
+
+.duki-spotify{
+	grid-row: 3;
+	grid-column: 1/10;
+	width: 1536px;
+	height: 300px;
+}
+
+.section-discografica-albunes{
+	grid-row: 5/8;
+	grid-column: 1/8;
+	padding: 10px;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
+	display: grid;
+	padding: 0;
+}
+
+.album-1{
+	grid-row: 1;
+	grid-column: 1;
+}
+.album-2{
+	grid-row: 1;
+	grid-column: 4;
+}
+.album-3{
+	grid-row: 1;
+	grid-column: 7;
+}
+.album-4{
+	grid-row: 3;
+	grid-column: 1;
+}
+.album-5{
+	grid-row: 3;
+	grid-column: 4;
+}
+.album-6{
+	grid-row: 3;
+	grid-column: 7;
+}
+
+.section-discografica-albunes iframe{
+	width: 400px;
+	height: 300px;
+}
+
+
+.section-discografica-texto  h1{
 	font-family: 'Noto Sans JP';
 	font-weight: 500;
 	font-size: 50px;
+	color: #000;
+}
+.section-discografica-texto div{
+	padding: 0;
 }
 
-.body-discografica main section div p{
+.section-discografica-texto div p{
 	font-family: 'Noto Sans JP';
 	font-weight: 300;
 	font-size: 25px;
+	margin: 0;
+	color: #000;
 }
 
 /* CSS TIENDA */
@@ -181,6 +926,11 @@ li a{
 	background-position: center center;
 	background-attachment: fixed;
 	background-size: cover; 
+	grid-row: 1/3;
+	grid-column: 1/11;
+	height: 200px;
+	width: 100%;
+	color: #000;
 }
 
 .tarjeta-producto{
@@ -199,9 +949,10 @@ li a{
 	margin-bottom: 5px;
 	font-family: 'Noto Sans JP';
 	font-weight: 500;
+	color: #000;
 }
 .tarjeta-producto a{
-	background-color: #1c1c1c;
+	background-color: #000;
 	text-decoration: none;
 	color: white;
 	padding: 2px;
@@ -209,27 +960,106 @@ li a{
 	font-weight: 200;
 }
 
-/* CSS CONTACTO */
-
-.body-contacto main section div h1{
-	font-family: 'Noto Sans JP';
-	font-weight: 500;
-	font-size: 50px;
+.body-tienda{
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
+}
+.main-tienda{
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 75px 192px 192px 192px 192px 192px 192px 192px 192px 301px;
+	grid-row: 1;
+	grid-column: 1;
 }
 
-.body-contacto main section div p{
+.section-tienda{
+	grid-row: 3/9;
+	grid-column: 2/9;
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 75px 192px 192px 192px 192px 75px 192px 192px 75px 192px;
+}
+.producto-1{
+	grid-row: 2;
+	grid-column: 1;
+}
+.producto-2{
+	grid-row: 2;
+	grid-column: 4;
+}
+.producto-3{
+	grid-row: 2;
+	grid-column: 7;
+}
+.producto-4{
+	grid-row: 2;
+	grid-column: 10;
+}
+
+.header-tienda{
+	z-index: 1;
+	grid-row: 1;
+	grid-column: 1;
+}
+/* CSS CONTACTO */
+
+.body-contacto main section h1{
 	font-family: 'Noto Sans JP';
-	font-size: 25px;
-	width: 500px;
+	font-weight: 500;
+	font-size: 75px;
+	color: #E30413;
+}
+
+.main-contacto section p{
+	font-family: 'Noto Sans JP';
+	font-size: 35px;
+	width: 675px;
+	grid-row: 2;
+	color: #E30413;
 }
 
 form{
 	width: 500px;
+	height: 600px;
+	grid-row: 2;
+	grid-column: 6;
 }
 
-.form-group{
-	font-family: 'Noto Sans JP';
-	font-weight: 500;
-	font-size: 20px;
+
+.body-contacto{
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
+	background-image: url(../img/duki-river.jpeg);
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
+	background-size: cover;
+}
+
+.main-contacto{
+	grid-row: 1;
+	grid-column: 1;
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
+}
+
+.main-contacto section{
+	grid-row: 2;
+	grid-column: 2;
+	display: grid;
+	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
+	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
+}
+
+.texto-form{
+	font-family: 'Noto Sans JP'!important;
+	font-weight: 500 !important;
+	font-size: 20px !important;
+	text-align: left;
+	margin: 5px;
+	color: #E30413;
 }
 
