--- a/css/style.css
+++ b/css/style.css
@@ -44,28 +44,28 @@ header button img{
 }
 
 .body-index{
-	background-image: url(../img/duki-index.jpg);
+	background-image: url(../img/duki-index_upscaled.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-attachment: fixed;
 	background-size: cover;
 	display: grid;
-	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
-	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
-	width: 100vh;
-	height: 100vh;
+	grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	width: 100%;
+	height: 100%;
 }
 
 
 
 .main-index{
-	grid-row: 2;
+	grid-row: 2/5;
 	grid-column: 3/5;
 }
 
 
 footer{
-	grid-row: 7;
+	grid-row: 7/10;
 	grid-column: 1;
 }
 
@@ -90,14 +90,23 @@ li a{
 	font-family: 'Noto Sans JP';
 	font-weight: 500;
 }
-@media screen and (max-width: 1444px) {
+
+@media screen and (max-width: 1743px) {
 	.body-index{
 		background-position: 80%;
-		height: 100vh;
-		
+		grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 	}
-	.main-index{
-		grid-column: 2/4;
+	.offcanvas-backdrop.show {
+		width: 100%;
+		height: 100%;
+	}
+}
+
+@media screen and (max-width: 1267px) {
+	.body-index{
+		grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 	}
 	.h1-index{
 		font-size: 150px;
@@ -106,133 +115,74 @@ li a{
 		width: 100%;
 		height: 100%;
 	}
-	footer{
-		grid-row: 4;
-		grid-column: 1;
-	}
-	footer ul{
-		width: 300px;
-		margin: 10px;
-	}
-	footer ul li{
-		padding: 5px;
-	}
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1080px) {
 	.body-index{
-		grid-template-rows: 50px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
-		grid-template-columns: 152px 192px 192px 192px 192px 192px;
-	}
-	.h1-index{
-		font-size: 100px;
+		background-position: 95%;
+		grid-template-rows: 0.5fr 0.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 	}
 	.offcanvas-backdrop.show {
 		width: 100%;
 		height: 100%;
 	}
+	header{
+		grid-row: 2;
+	}
+	.main-index{
+		grid-row: 2/5;
+		grid-column: 7/18;
+	}
 	footer{
-		grid-row: 5;
-		grid-column: 1;
+		display: grid;
+		grid-row: 1/2;
+		grid-column: 1/20;
+		grid-template-columns: 74px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 	}
 	footer ul{
-		width: 300px;
-		margin: 10px;
+		width: 400px;
+		grid-column: 8/20;
+		grid-row: 1;
 	}
 	footer ul li{
-		
-		padding: 5px;
+		display: inline;
+		margin: 7px;
 	}
 }
 
-@media screen and (max-width: 770px){
+@media screen and (max-width: 910px) {
 	.body-index{
-		background-position: 87%; 
-		height: 100vh;
-		grid-template-rows: 50px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
-		grid-template-columns: 152px 250px 192px 192px 192px ;
-	}
-	.main-index{
-		grid-column: 2/4;
-	}
-	.h1-index{
-		font-size: 100px;
-	}
-	.offcanvas-backdrop.show {
-		width: 100%;
-		height: 100%;
-	}
-	footer{
-		grid-row: 1;
-		grid-column: 3;
-	}
-	footer ul{
-		width: 300px;
-		margin: 10px;
-	}
-	footer ul li{
-		display: inline;
-		padding: 5px;
+		background-position: 89%;
 	}
 }
 
-@media screen and (max-width: 550px){
+@media screen and (max-width: 720px) {
 	.body-index{
-		background-position: 85%; 
-		height: 100vh;
-		grid-template-rows: 50px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
-		grid-template-columns: 152px 192px 192px 192px ;
-	}
-	.main-index{
-		grid-column: 2/4;
-	}
-	.h1-index{
-		font-size: 150px;
-	}
-	.offcanvas-backdrop.show {
-		width: 100vh;
-		height: 100%;
-	}
-	footer{
-		grid-row: 1;
-		grid-column: 3;
-	}
-	footer ul{
-		width: 300px;
-		margin: 10px;
-	}
-	footer ul li{
-		display: inline;
-		padding: 5px;
+	background-position: 85%;
 	}
 }
-@media screen and (max-width: 375px){
+
+@media screen and (max-width: 616px) {
 	.body-index{
-		background-position: 82%; 
-		height: 100vh;
-		grid-template-columns: 152px 192px 192px 192px ;
+	background-position: 85%;
 	}
-	.main-index{
-		grid-column: 2/4;
+}
+
+@media screen and (max-width:563px) {
+	.body-index{
+		background-position: 83%;
 	}
-	.h1-index{
-		font-size: 150px;
-	}
-	.offcanvas-backdrop.show {
-		width: 100vh;
-		height: 100%;
-	}
-	footer{
-		grid-row: 1;
-		grid-column: 3;
-	}
-	footer ul{
-		width: 300px;
-		margin: 10px;
-	}
-	footer ul li{
-		display: inline;
-		padding: 5px;
+}
+
+@media screen and (max-width: 480px) {
+	.body-index{
+		background-position: 80%;
+	}	
+}
+@media screen and (max-width: 375px) {
+	.body-index{
+		background-position: 78%;
 	}
 }
 /* FIN CSS INDEX */
@@ -242,20 +192,18 @@ li a{
 .body-bio{
 	background-color: #c9d1dd;
 	display: grid;
-	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
-	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
+	grid-template-rows: repeat(10, 1fr);
+	grid-template-columns: repeat(30, 1fr);
 	width: 100vh;
 	height: 100vh;
 }
 .main-bio{
-	width: 1532px;
-	height: 909.52px;
-	grid-row: 1;
-	grid-column: 2/9;
+	grid-column: 6/16;
+	grid-row: 1/10;
 	display: grid;
-	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
-	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px;
-}
+	grid-template-rows: repeat(10, 1fr);
+	grid-template-columns: repeat(30, 1fr);
+}	
 
 
 .h1-bio{
@@ -263,9 +211,9 @@ li a{
 	font-weight: 900;
 	font-size: 50px;
 	text-align: left;
-	margin: 30px;
-	grid-row: 1;
-	grid-column: 4/7;
+	
+	grid-row: 1/10;
+	grid-column: 22/30;
 	color: black;
 }
 
@@ -273,10 +221,10 @@ li a{
 	width: 768px;
 	height: 700px;
 	overflow: auto;
-	grid-row: 2;
-	grid-column: 1;
 	padding: 10px;
 	color: black;
+	grid-row: 2/10;
+	grid-column: 1/30;
 }
 
 .text-bio::-webkit-scrollbar{
@@ -300,215 +248,106 @@ li a{
 .img-bio{
 	width: 768px;
 	height: 700px;
-	grid-row: 2;
-	grid-column: 5;
+	grid-row: 2/10;
+	grid-column: 29;
 	margin-left: 30px;
 	border-radius: 5px;
 }
-.footer-bio{
-	grid-row: 7;
-}
-@media screen and (max-width: 1440px) {
-	.body-bio{
-		grid-template-rows: 75px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
-		grid-template-columns: 50px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
-	}
-	.main-bio{
-		grid-row: 2;
-		grid-column: 2/9;
-		grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
-		grid-template-columns: 192px 250px 192px 172px 192px 192px 192px 192px;
-	}
-	.h1-bio{
-		grid-column: 3/6;
-	}
-	.img-bio{
-		width: 508px;
-		
-	}
-	.footer-bio{
-		grid-row: 1;
-		grid-column: 7;
-	}
-	.footer-bio ul{
-		width: 300px;
-		margin: 10px;
-	}
-	.footer-bio ul li{
-		display: inline;
-		padding: 5px;
-	}
-	.offcanvas-backdrop.show {
-		width: 100%;
-		height: 100%;
-	}	
 
-}
-@media screen and (max-width: 1000px) {
-	.h1-bio{
-		grid-row: 2;
-		grid-column: 2/7;	
-	}
+@media screen and (max-width: 1835px) {
 	.main-bio{
-		width: 1000px;
-		grid-template-columns: 250px 192px 192px 192px 192px 192px 192px 192px;
+		grid-column: 3/16;
 	}
-	.text-bio{
-		width: 1000px;
-		height: 2600px;
-		grid-row: 7;
-		grid-column: 1;
-	}
-	.img-bio{
-		width: 450px;
-		height: 450px;
-		grid-row: 3;
-		grid-column: 2;
-		margin-left: 0;
-		border-radius: 5px;
-	}
-	.footer-bio{
-		grid-row: 1;
-		grid-column: 6;
-	}
-	.footer-bio ul{
-		width: 300px;
-		margin: 10px;
-	}
-	.footer-bio ul li{
-		display: inline;
-		padding: 5px;
-	}
-	.offcanvas-backdrop.show {
-		width: 100%;
-		height: 100%;
-	}
-}
-@media screen and (max-width: 770px) {
 	.h1-bio{
-		grid-row: 2;
-		grid-column: 2/7;	
-	}
-	.main-bio{
-		width: 1000px;
-		grid-template-columns: 250px 192px 192px 192px 192px 192px 192px 192px;
-	}
-	.text-bio{
-		width: 1000px;
-		height: 2600px;
-		grid-row: 7;
-		grid-column: 1;
-	}
-	.img-bio{
-		width: 450px;
-		height: 450px;
-		grid-row: 3;
-		grid-column: 2;
-		margin-left: 0;
-		border-radius: 5px;
-	}
-	.footer-bio{
-		grid-row: 1;
-		grid-column: 6;
-	}
-	.footer-bio ul{
-		width: 300px;
-		margin: 10px;
-	}
-	.footer-bio ul li{
-		display: inline;
-		padding: 5px;
-	}
-	.offcanvas-backdrop.show {
-		width: 100%;
-		height: 100%;
+		grid-column: 22/30;
 	}
 }
 
-@media screen and (max-width: 550px) {
-	.h1-bio{
-		grid-row: 2;
-		grid-column: 2/7;	
-	}
+@media screen and (max-width: 1726px) {
 	.main-bio{
-		width: 1000px;
-		grid-template-columns: 250px 192px 192px 192px 192px 192px 192px 192px;
-	}
-	.text-bio{
-		width: 1000px;
-		height: 2600px;
-		grid-row: 7;
-		grid-column: 1;
-	}
-	.img-bio{
-		width: 450px;
-		height: 450px;
-		grid-row: 3;
-		grid-column: 2;
-		margin-left: 0;
-		border-radius: 5px;
-	}
-	.footer-bio{
-		grid-row: 1;
-		grid-column: 6;
-	}
-	.footer-bio ul{
-		width: 300px;
-		margin: 10px;
-	}
-	.footer-bio ul li{
-		display: inline;
-		padding: 5px;
-	}
-	.offcanvas-backdrop.show {
-		width: 100%;
-		height: 100%;
+		grid-column: 2/16;
 	}
 }
 
-@media screen and (max-width: 375px) {
-	.h1-bio{
-		grid-row: 2;
-		grid-column: 2/7;	
+@media screen and (max-width: 1689px) {
+	.img-bio, .text-bio{
+		width: 668px;
+		height: 600px;
 	}
 	.main-bio{
-		width: 1000px;
-		grid-template-columns: 250px 192px 192px 192px 192px 192px 192px 192px;
-	}
-	.text-bio{
-		width: 1000px;
-		height: 2600px;
-		overflow: auto;
-		grid-row: 7;
-		grid-column: 1;
-		padding: 10px;
-		color: black;
-	}
-	.img-bio{
-		width: 450px;
-		height: 450px;
-		grid-row: 3;
-		grid-column: 2;
-		margin-left: 0;
-		border-radius: 5px;
-	}
-	.footer-bio{
-		grid-row: 1;
-		grid-column: 6;
-	}
-	.footer-bio ul{
-		width: 300px;
-		margin: 10px;
-	}
-	.footer-bio ul li{
-		display: inline;
-		padding: 5px;
-	}
-	.offcanvas-backdrop.show {
-		width: 100%;
-		height: 100%;
+		grid-column: 4/16;
 	}
 }
+
+@media screen and (max-width: 1559px) {
+	.main-bio{
+		grid-column: 2/16;
+	}
+}
+
+@media screen and (max-width: 1484px) {
+	.img-bio , .text-bio{
+		width: 568px;
+		height: 500px;
+	}
+	.main-bio{
+		grid-row: 2/10;
+		grid-column: 4/16;
+	}
+}
+
+@media screen and (max-width: 1300px) {
+	.main-bio{
+	grid-column: 2/16;	
+	}
+}
+
+@media screen and (max-width: 1228px) {
+	.img-bio, .text-bio{
+		width: 468px;
+		height: 400px;
+	}
+	.main-bio{
+		grid-row: 2/10;
+		grid-column: 4/16;
+	}
+	.h1-bio{
+		grid-column: 20/30;
+	}
+}
+
+@media screen and (max-width: 1098px) {
+	.main-bio{
+		grid-column: 2/10;
+	}
+}
+
+@media screen and (max-width: 1080px) {
+	.h1-bio{
+		grid-row: 1/2;
+		grid-column: 5/15;
+	}
+	.img-bio{
+		width: 768px;
+		height: 700px;
+		grid-column: 1/16;
+		margin: 0;
+	} 
+	.text-bio{
+		width: 768px;
+		height: 700px;
+		grid-row: 10;
+		overflow: visible;
+	}
+	.main-bio{
+		grid-column: 4/10;
+		margin: 10px
+	}
+	.footer-bio{
+		grid-column: 9/20;
+	}
+}
+
 /* CCS GALERIA */
 
 .body-galeria{
@@ -549,7 +388,7 @@ li a{
 	
 }
 
-.main-galeria .section-galeria h1{
+.main-galeria .section-galeria h2{
 	font-family: 'Noto Sans JP';
 	font-weight: 600;
 	font-size: 50px;
@@ -612,7 +451,7 @@ iframe{
 /* CSS TOUR*/
 
 .body-tour{
-	background-image: url(../img/WhatsApp\ Image\ 2024-07-27\ at\ 21.27.11.jpeg);
+	background-image: url(../img/tour_upscaled.jpeg);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-attachment: fixed;
@@ -622,7 +461,7 @@ iframe{
 	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
 }
 
-.body-tour main h1{
+.body-tour main h2{
 	font-family: 'Noto Sans JP';
 	font-weight: 600;
 	font-size: 75px;
@@ -896,7 +735,7 @@ iframe{
 }
 
 
-.section-discografica-texto  h1{
+.section-discografica-texto  h2{
 	font-family: 'Noto Sans JP';
 	font-weight: 500;
 	font-size: 50px;
@@ -1004,7 +843,7 @@ iframe{
 }
 /* CSS CONTACTO */
 
-.body-contacto main section h1{
+.body-contacto main section h2{
 	font-family: 'Noto Sans JP';
 	font-weight: 500;
 	font-size: 75px;
@@ -1031,7 +870,7 @@ form{
 	display: grid;
 	grid-template-rows: 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px 113.69px;
 	grid-template-columns: 192px 192px 192px 192px 192px 192px 192px 192px 192px 192px;
-	background-image: url(../img/duki-river.jpeg);
+	background-image: url(../img/duki-river_upscaled.jpeg);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-attachment: fixed;
